[package]
authors     = ["Template Authors"]
description = "Template Description"
edition     = "2018"
homepage    = "https://template.homepage/"
license     = "Template"
name        = "template"
readme      = "README.md"
repository  = "https://github.com/template/repository/"
version     = "0.1.0"

[dependencies]
# crates
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }
serde = { version = "1.0.117", optional = true }
# substrate
frame-support = { version = "2.0.0", default-features = false }
frame-system  = { version = "2.0.0", default-features = false }

[dev-dependencies]
# substrate
sp-core    = { version = "2.0.0" }
sp-io      = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }


[features]
default = ["std"]

std = [
	"crates-std",
	"substrate-std",
]

crates-std    = [
	"codec/std",
	"serde",
]
substrate-std = [
	"frame-support/std",
	"frame-system/std",
]
